# Dental-Clinic-EOOP-Project

./: Appointment.cpp  Appointment.h  CMakeLists.txt  DentalClinic.cpp  DentalClinic.h  Dentist.cpp  Dentist.h  DentistsRegistry.cpp  DentistsRegistry.h  MedicalRecord.cpp  MedicalRecord.h  Patient.cpp  Patient.h  PatientsRegistry.cpp  PatientsRegistry.h  README.md  System.cpp  System.h  Tests.cpp  Tests.h  Treatment.cpp  Treatment.h  main.cpp
